# vsx-tidy

./: .gitignore  README.md
daemon/: Cargo.toml
daemon/src/: main.rs
docs/: PROTOCOL.md  SMOKE_TEST.md
extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  package.nls.json  package.nls.ru.json  tsconfig.json
extension/src/: extension.ts  protocol.ts
scripts/: build-daemon-docker.sh  build-daemon.sh  build-extension.sh  package-daemon.sh  package-extension.sh
smoke/: .clang-tidy  CMakeLists.txt  README.md
smoke/src/: c_tool.c  c_tool.h  clang_tidy_samples.cpp  main.cpp  util.cpp  util.h
